# BxInstallers

./: CMakeLists.txt  README.rst
BxBayeuxInstaller/: README.rst  bayeux_installer
BxBayeuxInstaller/resources/: bayeux.bash.in  package.bash.in
BxBoostInstaller/: README.rst  boost_installer  boost_installer.save
BxBoostInstaller/resources/: boost.bash.in
BxCampInstaller/: README.rst  camp_installer
BxCampInstaller/resources/: camp.bash.in
BxClhepInstaller/: README.rst  clhep_installer
BxClhepInstaller/resources/: clhep.bash.in
BxDecay0Installer/: README.rst  bxdecay0_installer
BxDecay0Installer/resources/: package.bash.in
BxGeant4DatasetsInstaller/: README.rst  g4datasets_installer  mkdebpackage  mkrpmpackage
BxGeant4Installer/: README.rst  geant4_installer
BxGeant4Installer/resources/: geant4.bash.in
BxGslInstaller/: README.rst  gsl_installer
BxGslInstaller/resources/: gsl.bash.in
BxJsontoolsInstaller/: README.rst  bxjsontools_installer
BxJsontoolsInstaller/resources/: package.bash.in
BxProtobuf/: protobuf_installer
BxProtobuf/resources/: protobuf.bash.in
BxProtobuftoolsInstaller/: README.rst  bxprotobuftools_installer
BxProtobuftoolsInstaller/resources/: package.bash.in
BxQtInstaller/: README.rst  qt_installer
BxQtInstaller/resources/: qt.bash.in
BxRabbitmqInstaller/: README.rst  bxrabbitmq_installer
BxRootInstaller/: README.rst  root_installer  test.sh
BxSnrsInstaller/: README.rst  snrs_installer
documentation/: BayeuxDepGraph.py
lib/: libbxiw.bash
scripts/: install-ubuntu-22.04.bash
(+21 files in other folders)
